@@ -1,3 +1,8 @@
+Wed Mar 22 04:14:12 2000  Tom Gilbert  <gilbertt@btinternet.com>
+
+	* Added format specifiers for actions. %w width, %h height, %p
+	pixels, %s size, %t type (jpeg etc).
+
 Wed Mar 22 03:50:24 2000  Tom Gilbert  <gilbertt@btinternet.com>
 
 	* User definable actions for slideshow and multiwindow modes. Use
